# ark-fork

./: .pre-commit-config.yaml.disabled  README.md  devspace.yaml  sonar-project.properties  version.txt
.claude-plugin/: marketplace.json
.github/: CHANGELOG.md  release-please-config-rc.json  release-please-config-rc.json.disabled  release-please-config.json  release-please-manifest.json
.github/workflows/: build_docs.yaml  cicd.yaml  deploy.yml
.github/workflows.disabled/: pr-preview.yaml  promote-to-stable.yaml  terraform_apply_gcp.yml  terraform_plan_gcp.yml  validate_pr_title.yml
ark/: Dockerfile  Dockerfile.completions  Makefile  devspace.yaml  go.mod  go.sum
ark/cmd/: main.go  main_test.go
charts/ark-tenant/: Chart.yaml
docs/: package-lock.json  package.json
docs/app/: globals.css  layout.jsx  sidebar-active-sync.jsx
docs/content/: quickstart.mdx
docs/scripts/: check-links.js  validate-ark-yaml-ignore  validate-ark-yaml.js  validate-ark-yaml.test.js
images/ark-tools/: Dockerfile
lib/ark-sdk/: pyproject.toml
samples/a2a/simple-agent/: Dockerfile  README.md  pyproject.toml
samples/a2a/simple-agent/src/simple_a2a_server/: main.py
samples/teams/: selector-strategy.yaml
services/ark-broker/: Makefile  README.md  build.mk  devspace.yaml
services/ark-dashboard/: CLAUDE.md  Dockerfile  README.md  entrypoint.sh
services/ark-landing-page/: package-lock.json  package.json
templates/mcp-server/: Dockerfile
tests/: .chainsaw.yaml  CLAUDE.md  mock-llm-values.yaml
tests/a2a-agent-discovery/: chainsaw-test.yaml  mock-llm-values.yaml
(+352 files in other folders)
